--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,7 +2,12 @@
     background-color: #333;
     color: #fff;
     padding: 20px 40px;
-    text-align: center;
+    width: 100%;
+    margin-top: 40px;
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
   
   .footer p {
@@ -19,3 +24,4 @@
       font-size: 13px;
     }
   }
+  
